# rcdtool-rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  config.ini.sample
src/: cli.rs  config.rs  downloader.rs  main.rs  telegram.rs  utils.rs
