[package]
name = "rcdtool-rust"
version = "0.1.0"
edition = "2024"
description = "Rust rewrite of rcdtool Telegram restricted-content downloader"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
configparser = "3.1"
futures = "0.3"
grammers-client = { version = "0.9", features = ["fs"] }
grammers-session = { version = "0.9", features = ["sqlite-storage"] }
infer = "0.19"
regex = "1.12"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
